--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "arden_stanley",
+  "name": "stanleya1293.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://stanleya1293.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,8 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "http://stanleya1293.github.io/arden_stanley"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
